# AndroidOpenSSL

./: README.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/hzy/openssl/demo/: CryptoTestActivity.java  MainActivity.java  MainApplication.java
app/src/main/res/layout/: activity_crypto_test.xml  activity_main.xml
openssl/: build.gradle
openssl/src/main/: AndroidManifest.xml
openssl/src/main/cpp/: Android.mk  CMakeLists.txt  OpenSSLApi.c
openssl/src/main/cpp/api/: api_base64.c  api_base64.h  api_md5.c  api_md5.h  api_sha1.c  api_sha1.h  ndk_log.h
openssl/src/main/java/com/hzy/openssl/: OpenSSLApi.java
